# DataStorage

./: CMakeLists.txt  README.md  main.c
src/: main.c
storage/: CMakeLists.txt  storage.c  storage.h  storage_file.c  storage_file.h
storage/blocks/: block_creat.c  block_creat.h  block_info.c  block_info.h  block_types.h  blocks.c  blocks.h
storage/cells/: cell_types.h
storage/cli/: block_cli.c  block_cli.h
test/: CMakeLists.txt
test/func/: README.md  storage_init.c  storage_init.cc
test/smoke/: README.md
test/unit/: README.md
test/utils/: test.h
